# mock-idp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TROUBLESHOOTING.md  alembic.ini  config.example.yaml  pyproject.toml
.github/scripts/: cleanup-sha-artifacts.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
chart/: .helmignore  Chart.yaml  README.md  README.md.gotmpl  values.yaml
chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
docs/mock-oidc/: ADR-000-process.md  ADR-001-python-mock-oidc.md  ADR-002-provider-plugin-architecture.md  ADR-003-store-abstraction.md  ADR-004-per-issuer-signing-keys.md  ADR-005-joserfc-migration.md  README.md  business-model.md  hosting-poc.md  infra-philosophy.md  playground.html  pro-enterprise.md  roadmap.md
docs/mock-oidc/briefs/: intelligence-2026-05-17.md  operational-brief.md  stakeholder-brief.md
docs/mock-oidc/docs/: architecture.md  implementation-guide.md  test-scenarios.md
manifests/: mock-idp.yaml
src/: playground.html
src/mock_idp/: config.py  keys.py  main.py  models.py  tokens.py  webhooks.py
src/mock_idp/providers/: __init__.py  entra_id.py
src/mock_idp/routers/: admin.py  debug.py  oidc.py  playground.py
src/mock_idp/store/: __init__.py  pg_store.py  yaml_store.py
tests/: test_app.py
