[project]
name = "mock-idp"
version = "0.3.2"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "authlib==1.7.2",
    "python-multipart==0.0.28",
    "pyyaml==6.0.3",
    "pydantic==2.13.4",
]

[dependency-groups]
dev = [
    "ruff==0.15.12",
    "pytest==9.0.3",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py314"
