[project]
name = "mock-idp"
version = "0.5.6"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "httpx==0.28.1",
    "python-multipart==0.0.28",
    "pyyaml==6.0.3",
    "pydantic==2.13.4",
    "watchfiles>=1.1.1",
    "joserfc>=1.6.5",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0.49",
    "alembic>=1.14",
]

[dependency-groups]
dev = [
    "ruff==0.15.12",
    "pytest==9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py314"
